--- a/Selecao/Selecao-Web/src/main/resources/templates/_nova-entrevista.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/_nova-entrevista.html
@@ -1,29 +1,29 @@
 <div class="col-md-5 col-md-offset-3">
     <form id="nova-edicao-form" data-url="/nova-entrevista" role="form"  method="POST">
-        <input type="number" hidden="hidden" th:value="${idCandidato}" name="idcandidato" />
+        <input type="number" hidden="hidden" th:value="${idCandidato}" name="idCandidato" />
         <div class="form-group">
-          <label for="data">Data entrevista:</label>
-          <input type="text" class="form-control input-data" placeholder="dd/mm/aaaa" name="dataentrevista" required="required"/>
+            <label for="data">Data entrevista:</label>
+            <input type="text" class="form-control input-data" placeholder="dd/mm/aaaa" name="dataEntrevista" required="required"/>
         </div>
         <div class="form-group">
-          <label for="data">Parecer Rh:</label>
-          <input type="text" class="form-control input-data" placeholder="Descrição do parecer rh" name="parecerrh" required="required"/>
+            <label for="data">Parecer Rh:</label>
+            <input type="text" class="form-control input-data" placeholder="Descrição do parecer rh" name="parecerRh" required="required"/>
         </div>
         <div class="form-group">
-          <label for="data">Parecer Técnico:</label>
-          <input type="text" class="form-control input-data" placeholder="Descrição do parecer técnico" name="parecertecnico" required="required"/>
+            <label for="data">Parecer Técnico:</label>
+            <input type="text" class="form-control input-data" placeholder="Descrição do parecer técnico" name="parecerTecnico" required="required"/>
         </div>
         <div class="form-group">
-          <label for="data">Nota da prova G36:</label>
-          <input type="text" class="form-control input-data" placeholder="0.0" name="provag36" required="required"/>
+            <label for="data">Nota da prova G36:</label>
+            <input type="text" class="form-control input-data" placeholder="0.0" name="provaG36" required="required"/>
         </div> 
         <div class="form-group">
-          <label for="data">Nota da prova AC:</label>
-          <input type="text" class="form-control input-data" placeholder="0.0" name="provaac" required="required"/>
+            <label for="data">Nota da prova AC:</label>
+            <input type="text" class="form-control input-data" placeholder="0.0" name="provaAc" required="required"/>
         </div>  
         <div class="form-group">
-          <label for="data">Nota da prova Técnica:</label>
-          <input type="text" class="form-control input-data" placeholder="0.0" name="provatecnica" required="required"/>
+            <label for="data">Nota da prova Técnica:</label>
+            <input type="text" class="form-control input-data" placeholder="0.0" name="provaTecnica" required="required"/>
         </div>
         <button type="submit" class="btn btn-default">Salvar</button>
     </form>
