--- a/Selecao/Selecao-Web/src/main/resources/templates/formulario-candidato.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/formulario-candidato.html
@@ -1,32 +1,32 @@
 
 <form th:action="@{/email/confirmar-inscricao}" th:object="${informacao}" method="POST">
     <input type="hidden" th:value="${token}" name="token"></input>
-    <input type="hidden" th:value="${informacao.idinformacao}" name="idinformacao"></input>
-    <input type="hidden" th:value="${informacao.idcandidato.idcandidato}" name="idcandidato.idcandidato"></input>
+    <input type="hidden" th:value="${informacao.idInformacao}" name="idInformacao"></input>
+    <input type="hidden" th:value="${informacao.idCandidato.idcandidato}" name="idCandidato.idCandidato"></input>
     <div class="form-group">
         <label>Nome</label>
-        <input required="required" class="form-control" type="text" th:value="${informacao.idcandidato.nome}" name="idcandidato.nome"/>
-        <p class="text-danger" th:if="${#fields.hasErrors('idcandidato.nome')}" th:errors="*{idcandidato.nome}"></p>
+        <input required="required" class="form-control" type="text" th:value="${informacao.idCandidato.nome}" name="idCandidato.nome"/>
+        <p class="text-danger" th:if="${#fields.hasErrors('idCandidato.nome')}" th:errors="*{idCandidato.nome}"></p>
     </div>
     <div class="form-group">
         <label>Email</label>
-        <input required="required" class="form-control" type="email" th:value="${informacao.idcandidato.email}" name="idcandidato.email"/> 
-        <p class="text-danger" th:if="${#fields.hasErrors('idcandidato.email')}" th:errors="*{idcandidato.email}"></p>
+        <input required="required" class="form-control" type="email" th:value="${informacao.idCandidato.email}" name="idCandidato.email"/> 
+        <p class="text-danger" th:if="${#fields.hasErrors('idCandidato.email')}" th:errors="*{idCandidato.email}"></p>
     </div>
     <div class="form-group">
         <label>Instituição de Ensino</label>
-        <input required="required" class="form-control" type="text" th:value="${informacao.idcandidato.instituicaoensino}" name="idcandidato.instituicaoensino"/> 
-        <p class="text-danger" th:if="${#fields.hasErrors('idcandidato.instituicaoensino')}" th:errors="*{idcandidato.instituicaoensino}"></p>
+        <input required="required" class="form-control" type="text" th:value="${informacao.idCandidato.instituicaoEnsino}" name="idCandidato.instituicaoEnsino"/> 
+        <p class="text-danger" th:if="${#fields.hasErrors('idCandidato.instituicaoEnsino')}" th:errors="*{idCandidato.instituicaoEnsino}"></p>
     </div>
     <div class="form-group">
         <label>Curso</label>
-        <input required="required" class="form-control" type="text" th:value="${informacao.idcandidato.curso}" name="idcandidato.curso"/> 
-        <p class="text-danger" th:if="${#fields.hasErrors('idcandidato.curso')}" th:errors="*{idcandidato.curso}"></p>
+        <input required="required" class="form-control" type="text" th:value="${informacao.idCandidato.curso}" name="idCandidato.curso"/> 
+        <p class="text-danger" th:if="${#fields.hasErrors('idCandidato.curso')}" th:errors="*{idCandidato.curso}"></p>
     </div>
     <div class="form-group">
         <label>Previsao Formatura</label>
-        <input required="required" class="form-control" type="text" th:value="${informacao.idcandidato.previsaoformatura}" name="idcandidato.previsaoformatura" placeholder="aaaa/mm"/> 
-        <p class="text-danger" th:if="${#fields.hasErrors('idcandidato.previsaoformatura')}" th:errors="*{idcandidato.previsaoformatura}"></p>
+        <input required="required" class="form-control" type="text" th:value="${informacao.idCandidato.previsaoFormatura}" name="idCandidato.previsaoFormatura" placeholder="aaaa/mm"/> 
+        <p class="text-danger" th:if="${#fields.hasErrors('idCandidato.previsaoFormatura')}" th:errors="*{idCandidato.previsaoFormatura}"></p>
     </div>
     <div class="form-group">
         <label>Telefone</label>
@@ -35,8 +35,8 @@
     </div>
     <div class="form-group">
         <label>Data de nascimento</label>
-        <input required="required" class="form-control" type="text" th:value="*{datanascimento}" name="datanascimento" placeholder="dd/mm/aaaa"/> 
-        <p class="text-danger" th:if="${#fields.hasErrors('datanascimento')}" th:errors="*{datanascimento}"></p>
+        <input required="required" class="form-control" type="text" th:value="*{dataNascimento}" name="dataNascimento" placeholder="dd/mm/aaaa"/> 
+        <p class="text-danger" th:if="${#fields.hasErrors('dataNascimento')}" th:errors="*{dataNascimento}"></p>
     </div>
     <div class="form-group">
         <label>Cidade</label>
@@ -45,10 +45,10 @@
     </div>
     <div class="form-group">
         <label>Linkedin URL</label>
-        <input required="required" class="form-control" type="text" th:value="*{urllinkedin}" name="urllinkedin"/> 
-        <p class="text-danger" th:if="${#fields.hasErrors('urllinkedin')}" th:errors="*{urllinkedin}"></p>
+        <input required="required" class="form-control" type="text" th:value="*{urlLinkedin}" name="urlLinkedin"/> 
+        <p class="text-danger" th:if="${#fields.hasErrors('urlLinkedin')}" th:errors="*{urlLinkedin}"></p>
     </div>
-    <div class="form-group" th:if="${informacao.idinformacao} == 0">
+    <div class="form-group" th:if="${informacao.idInformacao} == 0">
         <label>Senha</label>
         <input required="required" class="form-control" type="password" name="senha"/> 
         <p class="text-danger" th:if="${#fields.hasErrors('senha')}" th:errors="*{senha}"></p>
