--- a/Selecao/Selecao-Web/src/main/resources/templates/nova-edicao.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/nova-edicao.html
@@ -1,31 +1,30 @@
 <div class="col-md-5 col-md-offset-3">
     <form id="nova-edicao-form" data-url="/cadastro-nova-edicao" role="form"  method="POST">
         <div class="form-group">
-          <label for="data">Data inicio de agendamento:</label>
-          <input type="text" class="form-control input-data" placeholder="dd/mm/aaaa" name="inicioselecao" required="required"/>
+            <label for="data">Data inicio de agendamento:</label>
+            <input type="text" class="form-control input-data" placeholder="dd/mm/aaaa" name="inicioSelecao" required="required"/>
         </div>
         <div class="form-group">
-          <label for="data">Data fim do processo seletivo:</label>
-          <input type="text" class="form-control input-data" placeholder="dd/mm/aaaa" name="finalselecao" required="required"/>
+            <label for="data">Data fim do processo seletivo:</label>
+            <input type="text" class="form-control input-data" placeholder="dd/mm/aaaa" name="finalSelecao" required="required"/>
         </div>
         <div class="form-group">
-          <label for="data">Data inicio das aulas:</label>
-          <input type="text" class="form-control input-data" placeholder="dd/mm/aaaa" name="inicioaula" required="required"/>
+            <label for="data">Data inicio das aulas:</label>
+            <input type="text" class="form-control input-data" placeholder="dd/mm/aaaa" name="inicioAula" required="required"/>
         </div>
         <div class="form-group">
-          <label for="data">Data fim das aulas:</label>
-          <input type="text" class="form-control input-data" placeholder="dd/mm/aaaa" name="finalaula" required="required"/>
+            <label for="data">Data fim das aulas:</label>
+            <input type="text" class="form-control input-data" placeholder="dd/mm/aaaa" name="finalAula" required="required"/>
         </div>  
         <div class="form-group">
-          <label for="data">Ano edição:</label>
-          <input type="text" class="form-control" placeholder="aaaa" name="edicao" required="required"/>
+            <label for="data">Ano edição:</label>
+            <input type="text" class="form-control" placeholder="aaaa" name="edicao" required="required"/>
         </div> 
         <div class="form-group">
-          <label for="data">Semestre edição:</label>
-          <input type="text" class="form-control"  name="edicao" required="required"/>
+            <label for="data">Semestre edição:</label>
+            <input type="text" class="form-control"  name="edicao" required="required"/>
         </div>
-        
+
         <button type="submit" class="btn btn-default">Salvar</button>
     </form>
-</div> 
-                  
+</div>            
