--- a/Selecao/Selecao-Web/src/main/resources/templates/index.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h1 class="text-center titulo">Candidatar-se ao <span class="laranja">projeto crescer</span></h1>
+                    <h1 class="text-center titulo">Inscreva-se no <span class="laranja">projeto crescer</span></h1>
                 </div>
             </div>
             <div class="row row-central">
