--- a/Selecao/Selecao-Web/src/main/resources/templates/_Candidatos.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/_Candidatos.html
@@ -12,9 +12,9 @@
     <div class="input-group col-xs-5 col-sm-5 col-md-2">
         <select class="form-control" id="txtStatus" name="status">
             <option value="" class="optionDisable">Status:</option>
-            <option value="AGUARDANDO CONTATO" th:selected="${valorAntigoInput.status} == 'AGUARDANDO CONTATO'">Aguardando Contato</option>
+            <option value="AGUARDANDO_CONTATO" th:selected="${valorAntigoInput.status} == 'AGUARDANDO_CONTATO'">Aguardando Contato</option>
             <option value="ENTREVISTADO" th:selected="${valorAntigoInput.status} == 'ENTREVISTADO'">Entrevistado</option>
-            <option value="SEM INTERESS" th:selected="${valorAntigoInput.status} == 'SEM INTERESS'">Sem Interesse</option>
+            <option value="SEM_INTERESS" th:selected="${valorAntigoInput.status} == 'SEM_INTERESS'">Sem Interesse</option>
         </select>
     </div>
     <div class="input-group col-xs-12 col-sm-1 col-md-1">
