--- a/Selecao/Selecao-Web/src/main/resources/templates/fragments.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/fragments.html
@@ -7,10 +7,14 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css"/>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/sweetalert2/4.0.6/sweetalert2.min.css"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.8.0/fullcalendar.min.css"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.8.0/fullcalendar.print.css" media="print"/>
         <link rel="stylesheet" th:href="@{/css/menulateral.css}"/>
         <link rel="stylesheet" th:href="@{/css/paginaadmin.css}"/>
         <link rel="stylesheet" th:href="@{/css/candidato.css}"/>
         <title>Titulo do Projeto</title>
+        
+
     </head>
     <body>
         <div id="sidebar-wrapper" th:fragment="sidebar-wrapper">
@@ -28,16 +32,19 @@
                 <li class="li-opcao-menu">
                     <a href="#" data-url="/candidatos" class="opcao-side-bar" ><span class="glyphicon glyphicon-list icon-menu"></span>Lista de Candidatos</a>
                 </li>
+                    <li class="li-opcao-menu">
+                        <a href="#"  data-url="/novaedicao" class="btn-new-processo" ><span class="glyphicon glyphicon-education icon-menu"></span>Nova Edição</a>
+                    </li>
                 <li class="li-opcao-menu">
                     <a href="#"  data-url="/novaedicao" class="btn-new-processo" ><span class="glyphicon glyphicon-education icon-menu"></span>Nova Edição</a>
                 </li>
                 <li class="li-opcao-menu">
                     <a href="#" class="btnLogout"><span class="glyphicon glyphicon-log-out icon-menu"></span>Sair</a>
-                </li>
             </ul>
+                </li>
         </div>
-        <nav class="navbar navbar-default menu-nav nav-admin" th:fragment="nav">
             <div class="navbar-header">
+        <nav class="navbar navbar-default menu-nav nav-admin" th:fragment="nav">
                 <a class="navbar-brand" href="#" id="menu-toggle">
                     <span class="glyphicon glyphicon-align-justify"></span>
                 </a>
