--- a/Selecao/Selecao-Web/src/main/resources/templates/_agendamento.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/_agendamento.html
@@ -6,7 +6,7 @@
         <input type="text" class="form-control titulo"/>
     </div>
     <div class="form-group">
-      <label for="pwd">Tipo:</label>
+      <label for="tipo">Tipo:</label>
       <input type="text" class="form-control tipo"/>
     </div>
 </div>
