--- a/Selecao/Selecao-Web/src/main/resources/static/css/paginaadmin.css
+++ b/Selecao/Selecao-Web/src/main/resources/static/css/paginaadmin.css
@@ -117,3 +117,12 @@ form label.error{
 .top10 { margin-top:10px; }
 .top15 { margin-top:15px; }
 .top25 { margin-top:25px; }
+
+.glyphicon{
+    font-size: 17px;
+    top: 3px;
+}
+
+.input-group{
+    margin: 15px 0px;
+}
