fix(_Candidatos): arrumar filtro de status

--- a/Selecao/Selecao-Web/src/main/resources/templates/_Candidatos.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/_Candidatos.html
@@ -14,7 +14,7 @@
             <option value="" class="optionDisable">Status:</option>
             <option value="AGUARDANDO_CONTATO" th:selected="${valorAntigoInput.status} == 'AGUARDANDO_CONTATO'">Aguardando Contato</option>
             <option value="ENTREVISTADO" th:selected="${valorAntigoInput.status} == 'ENTREVISTADO'">Entrevistado</option>
-            <option value="SEM_INTERESS" th:selected="${valorAntigoInput.status} == 'SEM_INTERESS'">Sem Interesse</option>
+            <option value="SEM_INTERESSE" th:selected="${valorAntigoInput.status} == 'SEM_INTERESSE'">Sem Interesse</option>
         </select>
     </div>
     <div class="input-group col-xs-12 col-sm-1 col-md-1">
