feat(_entrevistados): começar listagem de entrevistados

--- a/Selecao/Selecao-Web/src/main/resources/templates/fragments.html
+++ b/Selecao/Selecao-Web/src/main/resources/templates/fragments.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" th:href="@{/css/paginaadmin.css}"/>
         <link rel="stylesheet" th:href="@{/css/candidato.css}"/>
         <title>Titulo do Projeto</title>
-        
+
 
     </head>
     <body>
@@ -32,9 +32,12 @@
                 <li class="li-opcao-menu">
                     <a href="#" data-url="/candidatos" class="opcao-side-bar" ><span class="glyphicon glyphicon-list icon-menu"></span>Lista de Candidatos</a>
                 </li>
-                    <li class="li-opcao-menu">
-                        <a href="#"  data-url="/agendamento" class="btn-novo-agendamento" ><span class="glyphicon glyphicon-calendar icon-menu"></span>Agendamento</a>
-                    </li>
+                <li class="li-opcao-menu">
+                    <a href="#"  data-url="/entrevistados" class="opcao-side-bar" ><span class="glyphicon glyphicon-filter icon-menu"></span>Entrevistados</a>
+                </li>
+                <li class="li-opcao-menu">
+                    <a href="#"  data-url="/agendamento" class="btn-novo-agendamento" ><span class="glyphicon glyphicon-calendar icon-menu"></span>Agendamento</a>
+                </li>
                 <li class="li-opcao-menu">
                     <a href="#"  data-url="/novaedicao" class="btn-new-processo" ><span class="glyphicon glyphicon-education icon-menu"></span>Nova Edição</a>
                 </li>
